--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
       <div>
         <ul>
           <div class=" cancel-btn">
-            <i class="fa-solid fa-times"></i>
+            <i class="fa-solid fa-times fa-lg"></i>
           </div>
           <li><a class="active" href="index.html">Home</a></li>
           <li><a href="learn.html">Learn</a></li>
           <li><a href="#">Check Rates</a></li>
         </ul>
         <div class="icon menu-btn">
-          <i class="fa-solid fa-bars"></i>
+          <i class="fa-solid fa-bars fa-2x"></i>
         </div>
       </div>
       
