--- a/learn.html
+++ b/learn.html
@@ -70,7 +70,7 @@
       <div class="about">
         <h1>Contact us</h1>
         <li><i class="fa-solid fa-phone"></i> <a href="https://wa.me/2348139498576">+234 8139498576</a></li>
-        <li><i class="fa-solid fa-envelope"></i> <a href="incorporatedgbexchange@gmail.com">incorporatedgbexchange@gmail.com</a></li>
+        <li><i class="fa-solid fa-envelope"></i> <a href="mailto:incorporatedgbexchange@gmail.com">incorporatedgbexchange@gmail.com</a></li>
       </div>
 
       <div class="support">
